--- a/src/GUI/Launcher.ui
+++ b/src/GUI/Launcher.ui
@@ -407,7 +407,7 @@
          </widget>
         </item>
         <item row="0" column="3" colspan="2">
-         <widget class="QLabel" name="label">
+         <widget class="QLabel" name="appTitleLabel">
           <property name="font">
            <font>
             <pointsize>48</pointsize>
